k8s/mesh.yaml
# Copyright 2024 Robert Cronin
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: jueju-gateway
  namespace: jueju
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "jueju.robertcronin.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jueju-route
  namespace: jueju
spec:
  parentRefs:
    - name: jueju-gateway
      namespace: jueju
  hostnames: ["jueju.robertcronin.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: "/"
      backendRefs:
        - name: jueju-backend
          namespace: jueju
          port: 3000
